--- a/index.html
+++ b/index.html
@@ -6,25 +6,36 @@
             <h1>Add two number using text box as input using javascript</h1>
         </div>
             Enter First Number : <br>
-            <input type="text" id="Text1" name="TextBox1">
+            <input type="text" id="Text1" name="TextBox1" onkeyup="enable_result_button()">
             <br>
             Enter Second Number : <br>
-            <input type="text" id="Text2" name="TextBox2">
+            <input type="text" id="Text2" name="TextBox2" onkeyup="enable_result_button()">
             <br>
             Result : <br>
             <input type="text" id="txtresult" name="TextBox3">
             <br>
-         <input type="button" name="clickbtn" value="Display Result" onclick="add_number()">
+         <input type="button" name="clickbtn" value="Display Result" disabled onclick="add_number()">
 
         <script type="text/javascript">
+
+            function enable_result_button() {
+                var first_number = parseInt(document.getElementById("Text1").value);
+                var second_number = parseInt(document.getElementById("Text2").value);
+                if (first_number && second_number) {
+                    document.getElementsByName('clickbtn')[0].disabled = false;
+                } else {
+                    document.getElementsByName('clickbtn')[0].disabled = true;
+                }
+            }
+
             function add_number() {
-
-            var first_number = parseInt(document.getElementById("Text1").value);
-            var second_number = parseInt(document.getElementById("Text2").value);
-            var result = first_number + second_number;
-
-            document.getElementById("txtresult").value = result;
-        }
+                var first_number = parseInt(document.getElementById("Text1").value);
+                var second_number = parseInt(document.getElementById("Text2").value);
+            
+                var result = first_number + second_number;
+                document.getElementById("txtresult").value = result;
+            }
+        
         </script>
     </div>
 </body>
